--- a/api/api.csproj
+++ b/api/api.csproj
@@ -28,4 +28,8 @@
     <_ContentIncludedByDefault Remove="tests\obj\project.packagespec.json" />
     <_ContentIncludedByDefault Remove="tests\obj\tests.csproj.nuget.dgspec.json" />
   </ItemGroup>
+
+  <Target Name="PrePublishTarget" AfterTargets="Publish">
+  <Exec Command="dotnet ef database update" />
+</Target>
 </Project>
